test/files/neg/t7385.scala
object Bar {
  do { println("bippy") } while i<10
}

object Foo {
  while i<10 { () }
}
