test/files/neg/t7385.check
t7385.scala:2: error: parenthesized conditional expression expected
  do { println("bippy") } while i<10
                                ^
t7385.scala:6: error: parenthesized conditional expression expected
  while i<10 { () }
        ^
two errors found
